# FlashAttention-4-optimizations

./: CMakeLists.txt  Makefile  README.md  REFERENCE.md  benchmark_results.csv  compute_bound_benchmark.cu  exponential_kernel.cu  plot_results.py  report.md  results.md  softmax_accuracy_results.csv  softmax_accuracy_test.cu  submit_ncsu_hpc.sh
